k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gharuka-guru
  labels:
    app: gharuka-guru
